raffia/tests/error/scss/value/calc/interpolation.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ interpolation.scss:1:14
  │
1 │ a {b: calc(c(~#{d}))}
  │              ^


